# versionator-mcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  generate_registry_tests.py  pyproject.toml  requirements.txt  vmcp
.ai-context/: adding-new-package-managers-guide.md  package-manager-integration-summary.md
.cursor/: mcp.json  rules
.cursor-plans/: package-manager-integration-plan.md
.cursor/rules/: versionator-mcp-server.mdc
.github/workflows/: ci.yml  publish-to-pypi.yml
examples/: README.md
examples/claude-code/: mcp_config.json
tests/: conftest.py  test_api.py  utils.py
tests/core/: __init__.py  test_http_client.py  test_registry_factory.py
tests/registries/: __init__.py  test_bioconda.py  test_composer.py  test_cpan.py  test_cran.py  test_crates.py  test_dockerhub.py  test_go.py  test_hex.py  test_homebrew.py  test_maven.py  test_nextflow.py  test_nfcore.py  test_npm.py  test_nuget.py  test_pypi.py  test_rubygems.py  test_swift.py  test_terraform.py
tests/tools/: __init__.py  test_registry_tools.py
versionator_mcp/: __init__.py  app.py  config.py  main.py  models.py
versionator_mcp/api/: versionator.py
versionator_mcp/core/: __init__.py  base_registry.py  http_client.py  registry_factory.py
versionator_mcp/registries/: __init__.py  bioconda.py  composer.py  cpan.py  cran.py  crates.py  dockerhub.py  go.py  hex.py  homebrew.py  maven.py  nextflow.py  nfcore.py  npm.py  nuget.py  pypi.py  rubygems.py  swift.py  terraform.py
versionator_mcp/tools/: __init__.py  registry_tools.py
