[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "versionator-mcp"
version = "1.3.1"
description = "An MCP server that queries package registries across 19 different ecosystems for latest package versions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alaina Hardie", email = "alainahardie@gmail.com"}
]
keywords = ["mcp", "model-context-protocol", "package-manager", "npm", "pypi", "rubygems", "hex"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.11.3",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "mypy>=1.8.0",
    "pre-commit>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/trianglegrrl/versionator-mcp"
Repository = "https://github.com/trianglegrrl/versionator-mcp.git"
Issues = "https://github.com/trianglegrrl/versionator-mcp/issues"

[project.scripts]
versionator-mcp = "versionator_mcp.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["versionator_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
